--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,31 @@
-/* .App {
-  text-align: center;
-} */
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap");
+
+/* NOTE: BOOTSTRAP USES rem OVER px for images */
+
+body {
+  font-family: "Comfortaa", sans-serif;
+}
+
+/* NAVBAR */
+/* logo */
+.navbar .navbar-brand {
+  margin-left: 4rem;
+}
+#logo {
+  /* width: 16.25rem; */
+  width: 5rem;
+}
+/* navbar items */
+.navbar .navbar-nav {
+  margin-right: 4rem;
+}
+.navbar .navbar-nav a.nav-link {
+  margin: 0 0.4rem;
+  font-weight: 500;
+  letter-spacing: 0.04rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.navbar .navbar-nav a.nav-link:hover {
+  color: white;
+}
