--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 
 /* NOTE: BOOTSTRAP USES rem OVER px for images */
 
-body {
+* {
   font-family: "Comfortaa", sans-serif;
 }
 
@@ -14,6 +14,9 @@ body {
 #logo {
   /* width: 16.25rem; */
   width: 5rem;
+}
+#logo:hover {
+  filter: invert();
 }
 /* navbar items */
 .navbar .navbar-nav {
@@ -33,4 +36,67 @@ body {
 .navbar .navbar-nav a.nav-link:focus {
   border-top: 0.1875rem solid white;
   color: white;
+}
+
+/* HEADER */
+.header-wrapper {
+  position: relative;
+  background: url("https://images.unsplash.com/photo-1577401239170-897942555fb3")
+    no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+/* .header-wrapper .main-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-info h1 {
+} */
+
+.header-wrapper .main-info {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: start; */
+  /* align-items: center; */
+  width: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 20rem 0 0 2.5rem;
+  padding: 0 6.25rem 0 0;
+  border: 0.1875rem solid #0e6efd;
+}
+/* name */
+.header-wrapper .main-info h1 {
+  font-size: 4em;
+  font-weight: 700;
+  line-height: 1em;
+}
+/* typed text */
+.header-wrapper .main-info .typed-text {
+  margin-left: 0.2rem;
+  font-size: 2.5rem;
+  color: #0e6efd;
+}
+/* description */
+.header-wrapper .main-info p {
+  margin-left: 0.2rem;
+  font-size: 1.1em;
+  font-weight: 400;
+  max-width: 700px;
+}
+/* button */
+.header-wrapper .main-info .main-button {
+  width: 8rem;
+  margin-left: 0.2rem;
+  border: none;
+  border-radius: 0.5rem;
+}
+.header-wrapper .main-info .main-button:hover {
+  background-color: crimson;
 }
